--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "plugin:react-hooks/recommended"
   ],
   "rules": {
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "no-unused-vars": "warn"
   }
 }
